fixed about picture on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -745,5 +745,9 @@ header{
         margin: 2em auto 0 auto;
     }
 
+    .founder{
+        margin-left: 0;
+    }
+
 }
 
